--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
     "@typescript-eslint/ban-types": "off",
     "react/react-in-jsx-scope": "off",
     "@typescript-eslint/no-namespace": "off",
-    "react/display-name": "off"
+    "react/display-name": "off",
+    "@typescript-eslint/no-empty-function": "off"
   }
 }
