--- a/package.json
+++ b/package.json
@@ -19,16 +19,20 @@
     "@types/color": "^3.0.3",
     "@types/metro-config": "^0.66.0",
     "@types/qs": "^6.9.7",
+    "@types/react-native-indicators": "^0.16.2",
     "axios": "^1.2.1",
     "color": "^4.2.3",
     "expo": "~47.0.8",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
+    "lottie-react-native": "^5.1.4",
     "metro-config": "^0.73.4",
     "qs": "^6.11.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-indicators": "^0.17.0",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-reanimated": "^2.13.0",
     "react-native-redash": "^18.1.0",
