--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/public-sans": "^0.2.2",
+    "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.0",
@@ -39,7 +40,7 @@
     "react-native-root-siblings": "^4.1.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
-    "react-native-svg": "12.3.0",
+    "react-native-svg": "^13.6.0",
     "react-native-svg-transformer": "^1.0.0",
     "reactotron-react-native": "^5.0.3",
     "styled-components": "^5.3.5",
