--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "1.0.0",
   "main": "index.tsx",
   "scripts": {
+    "test": "jest --maxWorkers=50%",
+    "test:watch": "jest --watch --maxWorkers=25%",
+    "test:ci": "jest --runInBand",
     "start": "expo start",
     "dev": "react-native start",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "generate": "yarn plop --plopfile generators/plopfile.js"
   },
   "dependencies": {
     "@expo-google-fonts/public-sans": "^0.2.2",
@@ -17,16 +21,21 @@
     "@react-navigation/native": "^6.1.0",
     "@react-navigation/native-stack": "^6.9.5",
     "@types/color": "^3.0.3",
+    "@types/jest": "^29.2.4",
     "@types/metro-config": "^0.66.0",
     "@types/qs": "^6.9.7",
     "@types/react-native-indicators": "^0.16.2",
+    "@types/react-native-vector-icons": "^6.4.12",
     "axios": "^1.2.1",
     "color": "^4.2.3",
     "expo": "~47.0.8",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
+    "jest": "^29.3.1",
+    "jest-styled-components": "^7.1.1",
     "lottie-react-native": "^5.1.4",
     "metro-config": "^0.73.4",
+    "plop": "^3.1.1",
     "qs": "^6.11.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
@@ -34,19 +43,23 @@
     "react-native-gesture-handler": "^2.8.0",
     "react-native-indicators": "^0.17.0",
     "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-mask-text": "^0.13.1",
     "react-native-reanimated": "^2.13.0",
     "react-native-redash": "^18.1.0",
     "react-native-root-siblings": "^4.1.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "12.3.0",
     "react-native-svg-transformer": "^1.0.0",
+    "react-native-vector-icons": "^9.2.0",
     "reactotron-react-native": "^5.0.3",
     "styled-components": "^5.3.5",
     "typescript": "^4.9.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@testing-library/react-native": "^11.5.0",
     "@types/react": "^18.0.26",
     "@types/react-native": "^0.70.7",
     "@types/styled-components": "^5.1.26",
