--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@expo-google-fonts/public-sans": "^0.2.2",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^16.5.0",
+    "@react-native-firebase/auth": "^16.5.0",
     "@react-navigation/bottom-tabs": "^6.5.0",
     "@react-navigation/native": "^6.1.0",
     "@react-navigation/native-stack": "^6.9.5",
