implantacao do login do google

--- a/app.json
+++ b/app.json
@@ -3,8 +3,21 @@
     "name": "Travel",
     "slug": "Travel",
     "version": "1.0.0",
-    "assetBundlePatterns": [
-      "**/*"
+    "android": {
+      "googleServicesFile": "./google-services.json"
+    },
+    "ios": {
+      "googleServicesFile": "./GoogleService-Info.plist"
+    },
+    "plugins": [
+      "@react-native-google-signin/google-signin",
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "O aplicativo acessa suas fotos para permitir que você as compartilhe com seus amigos."
+        }
+      ]
     ]
-  }
+  },
+  "assetBundlePatterns": ["**/*"]
 }
