--- a/ios/Travel/Info.plist
+++ b/ios/Travel/Info.plist
@@ -18,6 +18,17 @@
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.55377238355-m3f8301mq6ibc5408van1v10dn49pulo</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
@@ -35,6 +46,12 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>Dê permissão ao $(PRODUCT_NAME) para acessar sua câmera</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Dê permissão ao $(PRODUCT_NAME) para usar seu microfone</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Dê permissão ao $(PRODUCT_NAME) para salvar fotos</string>
 	<key>UILaunchStoryboardName</key>
 	<string>SplashScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
