--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^16.5.0",
     "@react-native-firebase/auth": "^16.5.0",
+    "@react-native-google-signin/google-signin": "^9.0.2",
     "@react-navigation/bottom-tabs": "^6.5.0",
     "@react-navigation/native": "^6.1.0",
     "@react-navigation/native-stack": "^6.9.5",
@@ -31,6 +32,7 @@
     "axios": "^1.2.1",
     "color": "^4.2.3",
     "expo": "~47.0.8",
+    "expo-image-picker": "~14.0.2",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "jest": "^29.3.1",
