--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "generate": "yarn plop --plopfile generators/plopfile.js"
   },
   "dependencies": {
+    "@expo-google-fonts/alice": "^0.2.2",
     "@expo-google-fonts/public-sans": "^0.2.2",
+    "@motify/components": "^0.18.0",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^16.5.0",
@@ -33,12 +35,14 @@
     "color": "^4.2.3",
     "expo": "~47.0.8",
     "expo-image-picker": "~14.0.2",
+    "expo-secure-store": "~12.0.0",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "jest": "^29.3.1",
     "jest-styled-components": "^7.1.1",
     "lottie-react-native": "^5.1.4",
     "metro-config": "^0.73.4",
+    "moti": "^0.21.0",
     "plop": "^3.1.1",
     "qs": "^6.11.0",
     "react": "18.1.0",
